# binance-project

./: .gitignore  pyproject.toml
configs/: sentinel_eth.json
docs/: adaptive_heuristic_review.md
reports/: GLOBAL_2026-01-07.csv  GLOBAL_2026-01-08.csv
reports/bots/: ETHUSDT_2026-01-07_22-23-44.csv  ETHUSDT_2026-01-07_23-43-37.csv  ETHUSDT_2026-01-08_00-05-58.csv
reports/general/: general.csv
scripts/: adaptive_review.py  post_mortem_audit.py
src/: cli.py
src/hermes/: cli.py  controller.py
src/hermes.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/hermes/ai/: __init__.py  conviction_model.py  features.py  llm_client.py  llm_guard.py  profile_model.py  regime_classifier.py  types.py
src/hermes/ai/prompts/: README.md  (+2 more)
src/hermes/config/: bot_config_store.py
src/hermes/persistence/: db.py  models.py
src/hermes/providers/: Telegram.py  binance.py  market_data.py
src/hermes/reporting/: post_mortem_audit.py  trade_reporter.py
src/hermes/reports/: report_manager.py
src/hermes/repository/: decision_repository.py  performance_repository.py  trade_repository.py
src/hermes/service/: bot_builder.py  bot_service.py  bot_state.py  performance_job.py  profiles.py
src/hermes/state/: trade_state.py
src/hermes/utils/: adaptive_controller.py  bot.py  bot_config.py  report_writer.py  trading_mode.py
src/providers/: Telegram.py  binance.py  whatsapp.py
src/service/: bot_service.py
src/silvorn_pluto.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
src/utils/: bot.py  logging_config.py
state/: ETHUSDT.json
