[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "sentinel-bot"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
  "python-binance>=1.0.19",
  "python-dotenv>=1.0.1",
  "loguru>=0.7.2",
  "python-telegram-bot>=20.7"
]

[project.scripts]
sentinel = "sentinel.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
